--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./public/css/style.css">
-  <script type="text/javascript" src="./public/js/bundle.js" />
+  <script type="text/javascript" src="./public/js/bundle.js"></script>
   <title>Brexit Clock</title>
 </head>
 <body>
