added digit placeholder divs to web page

--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
   <h1>Steves Brexit Countdown!</h1>
+  <content>
+    <div class="days">
+      <div class=""digit" id="days0" ></div>
+      <div class=""digit" id="days1" ></div>
+    </div>
+    <div class="hours">
+      <div class="digit" id="hours0 "></div>
+      <div class="digit" id="hours1 "></div>
+    </div>
+    <div class="mins">
+      <div class="digit" id="mins0" ></div>
+      <div class="digit" id="mins1" ></div>
+    </div>
+    <div class="secs">
+      <div class="digit" id="secs0" ></div>
+      <div class="digit" id="secs1" ></div>
+    </div>
+  </content>
 </body>
 </html>
