--- a/client/index.html
+++ b/client/index.html
@@ -12,20 +12,36 @@
   <h1>Steves Brexit Countdown!</h1>
   <content>
     <div class="days">
-      <div class="digit" id="days0" ></div>
-      <div class="digit" id="days1" ></div>
+      <div class="digit" id="days0" >
+        <img src="" alt="" class="digit0">
+      </div>
+      <div class="digit" id="days1" >
+        <img src="" alt="" class="digit0">
+      </div>
     </div>
     <div class="hours">
-      <div class="digit" id="hours0"></div>
-      <div class="digit" id="hours1"></div>
+      <div class="digit" id="hours0">
+        <img src="" alt="" class="digit0">
+      </div>
+      <div class="digit" id="hours1">
+        <img src="" alt="" class="digit0">
+      </div>
     </div>
     <div class="mins">
-      <div class="digit" id="mins0" ></div>
-      <div class="digit" id="mins1" ></div>
+      <div class="digit" id="mins0" >
+        <img src="" alt="" class="digit0">
+      </div>
+      <div class="digit" id="mins1" >
+        <img src="" alt="" class="digit0">
+      </div>
     </div>
     <div class="secs">
-      <div class="digit" id="secs0" ></div>
-      <div class="digit" id="secs1" ></div>
+      <div class="digit" id="secs0" >
+        <img src="" alt="" class="digit0">
+      </div>
+      <div class="digit" id="secs1" >
+        <img src="" alt="" class="digit0">
+      </div>
     </div>
   </content>
 </body>
