--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./public/css/style.css">
   <script type="text/javascript" src="./public/js/bundle.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <title>Brexit Clock</title>
 </head>
 <body>
   <h1>Steves Brexit Countdown!</h1>
+  <h2>Days, hours, minutes and seconds until Brexit leave date.</h2>
   <content>
     <div class="days">
       <div class="digit" id="days0" >
