--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
   <title>Brexit Clock</title>
 </head>
 <body>
-  <h1>Steves Brexit Countdown!</h1>
+  <h1>Stevefaeembra Brexit Countdown</h1>
   <h2>Days, hours, minutes and seconds until Brexit leave date.</h2>
   <content>
     <div class="days">
