changed public folder to ./client

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="./client/public/css/style.css">
-  <script type="text/javascript" src="./client/public/js/bundle.js"></script>
+  <link rel="stylesheet" href="./public/css/style.css">
+  <script type="text/javascript" src="./public/js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <title>Brexit Clock</title>
 </head>
