--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./public/css/style.css">
   <script type="text/javascript" src="./public/js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet"> 
   <title>Brexit Clock</title>
 </head>
 <body>
