looking better with natural text

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./public/css/style.css">
   <script type="text/javascript" src="./public/js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
   <title>Brexit Clock</title>
 </head>
 <body>
@@ -22,6 +22,7 @@
         <img src="" alt="" class="digit0">
       </div>
     </div>
+    <div class="title">Days</div>
     <div class="hours">
       <div class="digit" id="hours0">
         <img src="" alt="" class="digit0">
@@ -30,6 +31,7 @@
         <img src="" alt="" class="digit0">
       </div>
     </div>
+    <div class="title">Hours</div>
     <div class="mins">
       <div class="digit" id="mins0" >
         <img src="" alt="" class="digit0">
@@ -38,6 +40,7 @@
         <img src="" alt="" class="digit0">
       </div>
     </div>
+    <div class="title">Minutes</div>
     <div class="secs">
       <div class="digit" id="secs0" >
         <img src="" alt="" class="digit0">
@@ -46,6 +49,7 @@
         <img src="" alt="" class="digit0">
       </div>
     </div>
+    <div class="title">Seconds</div>
   </content>
 </body>
 </html>
